--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
   <link rel="import" href="/src/dashboard-app.html">
   <link rel="import" href="/src/login.html">
- 
+
   <style>
     html {
       height: 100%;
@@ -325,124 +325,136 @@
 
 <script>
   const _logedinCheck = () => {
+
+  
     if (!store.get('OAuth') && !store.get('OAuth.token')) {
       document.getElementById('main').classList.add('not-logged');
       document.getElementById('login').classList.add('not-logged');
+      console.log("1store = ", store.get());
+    }
+    else{
+      console.log("2store = ", store.get());
     }
   }
   window.addEventListener('WebComponentsReady', function (e) {
     setTimeout(function () {
       // onAppReady();
-      _logedinCheck();
-      document.getElementById('login')
-        .addEventListener('logged-in', () => {
-          document.getElementById('main').classList.remove('not-logged');
-          document.getElementById('login').classList.remove('not-logged');
-          if (store.get('api.job') === '' || store.get('api.storages') === '') {
-            window.history.pushState({}, null, '/setting');
-            window.dispatchEvent(new CustomEvent('location-changed'));
-          }
-          console.log('logged-in');
-        });
-      document.getElementById('login')
-        .addEventListener('config-saved', (ev) => {
-          document.getElementById('main')._updateConfig();
-        });
-
-      document.getElementById('loading').setAttribute("loaded", "");
-    }, 900);
-
-
-    // TOKEN injecting
-    var open = window.XMLHttpRequest.prototype.open,
-      send = window.XMLHttpRequest.prototype.send;
-
-    function openReplacement(method, url, async, user, password) {
-      this._url = url;
-      if (store.get('OAuth') && store.get('OAuth.token'))
-        if (url.match(/&+/)) url += '&token=' + store.get('OAuth.token');
-        else url += '?token=' + store.get('OAuth.token');
-      else {
+        //----------- start login check -----------
         _logedinCheck();
+
+        document.getElementById('login')
+          .addEventListener('logged-in', () => {
+            document.getElementById('main').classList.remove('not-logged');
+            document.getElementById('login').classList.remove('not-logged');
+            if (store.get('api.job') === '' || store.get('api.storages') === '') {
+              window.history.pushState({}, null, '/setting');
+              window.dispatchEvent(new CustomEvent('location-changed'));
+            }
+            console.log('logged-in');
+          });
+        document.getElementById('login')
+          .addEventListener('config-saved', (ev) => {
+            document.getElementById('main')._updateConfig();
+          });
+
+        document.getElementById('loading').setAttribute("loaded", "");
+      }, 900);
+      //----------- end login check -----------
+
+      //################# start no login //#################
+
+      //################# end no login //#################
+
+      // TOKEN injecting
+      var open = window.XMLHttpRequest.prototype.open,
+        send = window.XMLHttpRequest.prototype.send;
+
+      function openReplacement(method, url, async, user, password) {
+        this._url = url;
+        if (store.get('OAuth') && store.get('OAuth.token'))
+          if (url.match(/&+/)) url += '&token=' + store.get('OAuth.token');
+          else url += '?token=' + store.get('OAuth.token');
+        else {
+          _logedinCheck();
+        }
+        return open.apply(this, arguments);
       }
-      return open.apply(this, arguments);
-    }
 
-    function sendReplacement(data) {
-      if (this.onreadystatechange) {
-        this._onreadystatechange = this.onreadystatechange;
+      function sendReplacement(data) {
+        if (this.onreadystatechange) {
+          this._onreadystatechange = this.onreadystatechange;
+        }
+        /**
+         * PLACE HERE YOUR CODE WHEN REQUEST IS SENT  
+         */
+        this.onreadystatechange = onReadyStateChangeReplacement;
+        return send.apply(this, arguments);
       }
-      /**
-       * PLACE HERE YOUR CODE WHEN REQUEST IS SENT  
-       */
-      this.onreadystatechange = onReadyStateChangeReplacement;
-      return send.apply(this, arguments);
-    }
 
-    function onReadyStateChangeReplacement() {
-      /**
-       * PLACE HERE YOUR CODE FOR READYSTATECHANGE
-       */
-      if (this.responseURL.match(store.get('api.job')) && this.response && this.response.status ===
-        'unauthorization') {
-        store.delete('OAuth');
-        _logedinCheck();
-      }
-      if (this._onreadystatechange) {
-        return this._onreadystatechange.apply(this, arguments);
-      }
-    }
-
-    window.XMLHttpRequest.prototype.open = openReplacement;
-    window.XMLHttpRequest.prototype.send = sendReplacement;
-    // (function (send) {
-    //   XMLHttpRequest.prototype.send = function (data) {
-
-    //     // if (store.get('OAuth') && store.get('OAuth.token')) this.setRequestHeader('Authorization', store.get('OAuth.token'));
-    //     // else {
-    //     //   _logedinCheck();
-    //     // }
-    //     // When this Response
-    //     this.onreadystatechange = () => {
-    //       //  Check token is here
-    //       if (this.responseURL.match(store.get('api.job')) && this.response && this.response.status === 'unauthorization') {
-    //         store.delete('OAuth');
-    //         _logedinCheck();
-    //       }
-    //       console.log(this.getAllResponseHeaders())
-    //     };
-    //     console.log(this)
-    //     send.call(this, data);
-    //   };
-    // })(XMLHttpRequest.prototype.send);
-
-
-    // LOG file
-    (function () {
-
-      var console = window.console
-      if (!console) return
-
-      function intercept(method) {
-
-        var original = console[method]
-        console[method] = function () {
-          // Do this for normal browsers
-          if (typeof ipc !== 'undefined') ipc.send('log', {
-            method: method,
-            text: arguments
-          })
-          if (original.apply) {
-            original.apply(console, arguments)
-          }
+      function onReadyStateChangeReplacement() {
+        /**
+         * PLACE HERE YOUR CODE FOR READYSTATECHANGE
+         */
+        if (this.responseURL.match(store.get('api.job')) && this.response && this.response.status ===
+          'unauthorization') {
+          store.delete('OAuth');
+          _logedinCheck();
+        }
+        if (this._onreadystatechange) {
+          return this._onreadystatechange.apply(this, arguments);
         }
       }
-      var methods = ['log', 'warn', 'error']
-      for (var i = 0; i < methods.length; i++)
-        intercept(methods[i])
-    })();
 
-  });
+      window.XMLHttpRequest.prototype.open = openReplacement;
+      window.XMLHttpRequest.prototype.send = sendReplacement;
+      // (function (send) {
+      //   XMLHttpRequest.prototype.send = function (data) {
+
+      //     // if (store.get('OAuth') && store.get('OAuth.token')) this.setRequestHeader('Authorization', store.get('OAuth.token'));
+      //     // else {
+      //     //   _logedinCheck();
+      //     // }
+      //     // When this Response
+      //     this.onreadystatechange = () => {
+      //       //  Check token is here
+      //       if (this.responseURL.match(store.get('api.job')) && this.response && this.response.status === 'unauthorization') {
+      //         store.delete('OAuth');
+      //         _logedinCheck();
+      //       }
+      //       console.log(this.getAllResponseHeaders())
+      //     };
+      //     console.log(this)
+      //     send.call(this, data);
+      //   };
+      // })(XMLHttpRequest.prototype.send);
+
+
+      // LOG file
+      (function () {
+
+        var console = window.console
+        if (!console) return
+
+        function intercept(method) {
+
+          var original = console[method]
+          console[method] = function () {
+            // Do this for normal browsers
+            if (typeof ipc !== 'undefined') ipc.send('log', {
+              method: method,
+              text: arguments
+            })
+            if (original.apply) {
+              original.apply(console, arguments)
+            }
+          }
+        }
+        var methods = ['log', 'warn', 'error']
+        for (var i = 0; i < methods.length; i++)
+          intercept(methods[i])
+      })();
+
+    });
 
   //fortest
   // document.querySelector("dashboard-app").addEventListener('openFileIndex', function (e) {
