--- a/app/src/pages/page-storages.html
+++ b/app/src/pages/page-storages.html
@@ -207,7 +207,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _updatestorageLists() {
         this.$.updateStorageLists.generateRequest();
       }
-      _loadStoragesComplete() {
+
+
+      _loadStoragesComplete(event) {
+        let res = event.detail.response;
+        if (res){
+          console.log("_loadStoragesComplete complete = ",res);
+        }
+        else{
+          console.log("_loadStoragesComplete error = ",event);
+        }
+     
         this.job_error = false;
         this.storageLists = [];
         if (this.storages && this.storages.length)
