--- a/app/src/pages/page-setting.html
+++ b/app/src/pages/page-setting.html
@@ -90,7 +90,8 @@
                                     <div class="form-group row">
                                         <label for="example-search-input" class="col-12 col-form-label">Token</label>
                                         <div class="col-12">
-                                            <input class="form-control" type="url" value="{{config.OAuth.token::input}}" id="example-search-input" placeholder="User Token">
+                                            <!-- <input class="form-control" type="text" value="{{config.OAuth.token::input}}" id="example-search-input" placeholder="User Token"> -->
+                                            <textarea rows="4" class="form-control" type="text" value="{{config.OAuth.token::input}}" id="example-search-input" placeholder="User Token"></textarea>
                                         </div>
                                     </div>
                                 </div>
