--- a/app/src/common/dashboard-sidemenu.html
+++ b/app/src/common/dashboard-sidemenu.html
@@ -254,9 +254,11 @@
             </div>
 
             <div class="form-group">
-                <h6>Storage API</h6>
-                <input class="form-control" type="url" value="{{config.OAuth.token::input}}" id="example-search-input" placeholder="User Token">
+                <h6>Token</h6>
+                <!-- <input class="form-control" type="text" value="{{config.OAuth.token::input}}" id="example-search-input" placeholder="User Token"> -->
                 <!-- <div class="form-control-feedback" hidden>Can't use space in job name</div> -->
+                <textarea rows="4" class="form-control" type="text" value="{{config.OAuth.token::input}}" id="example-search-input" placeholder="User Token"></textarea>
+                                     
             </div>
 
             <!-- </div> -->
